// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex validators should work 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be defined",
      "path": "0",
    },
    Object {
      "children": Array [
        Object {
          "children": null,
          "message": "Value should be a string",
          "path": "foo",
        },
      ],
      "message": "Value should have a valid shape",
      "path": "1",
    },
  ],
  "message": "At least one child should be valid",
  "path": "",
}
`;

exports[`complex validators should work 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": null,
              "message": "Value should be a string",
              "path": "bar",
            },
          ],
          "message": "Value should have a valid shape",
          "path": "foo",
        },
      ],
      "message": "Value should have a valid shape",
      "path": "0",
    },
  ],
  "message": "At least one child should be valid",
  "path": "",
}
`;

exports[`complex validators should work 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": null,
          "message": "Value should be defined",
          "path": "0",
        },
        Object {
          "children": null,
          "message": "Value should be a number",
          "path": "1",
        },
      ],
      "message": "Value should have a valid shape",
      "path": "0",
    },
    Object {
      "children": Array [
        Object {
          "children": null,
          "message": "Value should be defined",
          "path": "0",
        },
        Object {
          "children": null,
          "message": "Value should be a number",
          "path": "1",
        },
      ],
      "message": "Value should have a valid shape",
      "path": "1",
    },
  ],
  "message": "At least one child should be valid",
  "path": "",
}
`;

exports[`complex validators should work 4`] = `
Object {
  "children": null,
  "message": "Either Value should be a string OR Either Value should be a number OR Value should be greater than 5",
  "path": "",
}
`;

exports[`complex validators should work 5`] = `
Object {
  "children": null,
  "message": "Either Value should be a string OR Value should be a number",
  "path": "",
}
`;
